--- a/style.css
+++ b/style.css
@@ -10,11 +10,11 @@ td, th {
     align-items: center;
     width: 300px;
     height: 50px;
-    border: 1px solid black;
+    border: 1px solid rgb(159, 159, 159);
 }
 th {
-    background-color: rgb(198, 198, 198);
+    background-color: rgb(213, 213, 213);
 }
 td {
-    background-color: rgb(226, 226, 226);
+    background-color: rgb(236, 236, 236);
 }
